typescript/checker/tests/conformance/types/union/unionTypeEquivalence.ts.stderr
error: RedclaredVarWithDifferentType {
    span: Span {
        lo: BytePos(
            113,
        ),
        hi: BytePos(
            114,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/union/unionTypeEquivalence.ts:5:5
  |
5 | var x : C | D;
  |     ^

